--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,16 @@
 /* styles go here */
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.label {
+  display: block;
+  padding: 0 2px;
+  margin: 10px 0;
+}
+
+.fieldset {
+  margin-bottom: 20px;
+}
